feat: implement forecast retrieval